k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: ecommerce-frontend:v3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
