k8s/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          # Products API
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
